--- a/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.1 How People Work: A Micro Level Perspective.md
+++ b/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.1 How People Work: A Micro Level Perspective.md
@@ -1,72 +1,102 @@
-### 模块标题: Week 2: Flow Management and Lean Operations  
-#### 第一章: Optimizing Flow Management  
-##### 视频小节1: How People Work: A Micro Level Perspective  
+## Coursera 商业基础课程《运营管理导论》 - 模块2 - 流程管理和精益运营
+
+### 课程2.1 微观层面流程优化
+ 
+通过**Subway三明治制作流程案例**，聚焦**微观层面流程优化**，核心是掌握**周期时间（Cycle Time）**与**瓶颈识别**，实现劳动力效率最大化与资源利用率提升。
+
+#### 1. 关键概念与指标
+
+##### 1.1 处理时间（Processing Time）
+
+- **定义**：单个资源处理一个流单元所需时间（如员工1处理三明治需37秒）。  
+- **案例**：Subway员工1（37秒）、员工2（46秒）、员工3（37秒）。  
+
+##### 1.2 容量（Capacity） 
+
+- **公式**：容量=资源数量（m）/处理时间 → **单位时间产出能力**。  
+- **计算示例**：  
+  - 员工2容量=1/46秒≈78个/小时（瓶颈）。  
+
+##### 1.3 瓶颈（Bottleneck） 
+
+- **定义**：流程中容量最低的资源（如Subway员工2）。  
+- **影响**：整体流程产能由瓶颈决定（78个/小时）。  
+
+##### 1.4 流量率（Flow Rate）  
+
+- **公式**：流量率=min（需求，流程产能）→ 需求为100个/小时时，流量率=78个/小时。  
+
+##### 1.5 利用率（Utilization）  
+
+- **公式**：利用率=流量率/资源容量 → 员工1利用率≈80%，员工2利用率=100%。  
+
+##### 1.6 周期时间（Cycle Time）  
+
+- **定义**：两次连续产出的间隔时间=1/流量率 → 瓶颈周期时间=46秒/个。  
+- **应用**：生产20个三明治总时间=首件时间（37+46+37秒）+（19×46秒）=994秒。  
+
+#### 2. Subway案例解析
+
+##### 2.1 流程设计  
+
+- **传统模式**：1名员工全流程制作（120秒/个），产能30个/小时。  
+- **优化模式**：拆分为3人流水线，形成“迷你装配线”。  
+
+##### 2.2 瓶颈识别与影响  
+
+- **员工2处理时间最长（46秒）** → 成为瓶颈，流程产能=78个/小时。  
+- **非瓶颈资源利用率不足**：员工1与3的利用率仅80%。  
+
+##### 2.3 周期时间与批量生产  
+
+- **单件周期时间**：46秒（由瓶颈决定）。  
+- **批量生产计算**：首件耗时120秒，后续每46秒产出1个，20个总耗时≈16.6分钟。  
+
+#### 3. 关键结论与启示
+
+##### 3.1 瓶颈的动态管理
+
+- **短期调整**：需求高峰时增加瓶颈资源（如临时调配员工支援员工2）。  
+- **长期优化**：平衡各环节处理时间（如标准化员工2操作，缩短至40秒）。  
+
+##### 3.2 劳动力利用率与成本控制
+
+- **低利用率资源**（如员工1、3）可灵活调配至其他任务（如清洁、补货）。  
+- **直接劳动力成本计算**：总工时成本/产出量 → 优化后单位成本降低。  
+
+##### 3.3 服务业的「装配线思维」 
+
+- 分解服务流程（如快餐、银行柜台）为标准化步骤，减少变异性和等待时间。  
+
+#### 4. 行动建议
+
+##### 4.1 绘制流程图并标注处理时间
+
+- 识别所有资源与缓冲区，计算各节点容量（如Excel表格辅助）。  
+
+##### 4.2 定期计算资源利用率
+
+- 设定利用率阈值（如≥85%），低于阈值时重新分配任务或调整人力。  
+
+##### 4.3 动态调整周期时间
+
+- 需求波动时，通过增减班次或引入自动化工具（如自助点餐机）匹配产能。  
+
+##### 4.4 员工交叉培训
+
+- 提升多技能员工比例，增强混合灵活性（Mix Flexibility），应对瓶颈转移。  
 
 ---
 
-### 核心概念与框架  
-1. **周期时间（Cycle Time）与流程速率（Flow Rate）**  
-   • **周期时间**：完成一个流程单元（如一个三明治）所需的时间（秒/单位）。  
-     ◦ 计算公式：`周期时间 = 1 / 流程速率`。  
-     ◦ **案例（Subway）**：瓶颈环节（员工2）的处理时间为46秒/三明治，故周期时间为**46秒/单位**，即每46秒生产一个三明治。  
-   • **流程速率**：单位时间内的产出量（单位/小时）。  
-     ◦ **案例（Subway）**：瓶颈产能为78三明治/小时，故流程速率=min(需求, 瓶颈产能)=78单位/小时。  
+#### 总结
 
-2. **劳动力利用率（Labor Utilization）**  
-   • **定义**：实际产出（流程速率）与资源最大产能的比值，反映资源使用效率。  
-   • **计算**：`利用率 = 流程速率 / 资源产能`。  
-     ◦ **案例（Subway）**：  
-       ◦ 员工1产能=97三明治/小时，员工2=78三明治/小时（瓶颈），员工3=97三明治/小时。  
-       ◦ 当需求为100三明治/小时时：  
-         ▪ 员工1利用率=78/97≈80%；员工2=100%；员工3≈80%。  
-
-3. **直接劳动力成本（Direct Labor Cost）与劳动力内容（Labor Content）**  
-   • **劳动力内容**：生产一个单位所需的总人工时间。  
-     ◦ **案例（Subway）**：三个员工总处理时间=37+46+37=120秒/三明治。  
-   • **劳动力成本**：结合劳动力内容与员工时薪计算单位成本。  
+微观流程分析通过**分解步骤、量化指标、识别瓶颈**，将复杂操作转化为可优化单元。Subway案例表明，即使简单如三明治制作，科学分配资源可显著提升效率。核心在于：**以周期时间为锚点，平衡各环节处理时间，最大化瓶颈利用率，最终实现降本增效**。
 
 ---
 
-### 工具应用与案例分析  
-4. **流程流图与瓶颈识别（Subway案例）**  
-   • **流程步骤分解**：  
-     1. 员工1：处理时间37秒（切片面包、加配料）。  
-     2. 员工2：处理时间46秒（添加配菜、包装）→ **瓶颈**。  
-     3. 员工3：处理时间37秒（收银）。  
-   • **流程流图绘制**：  
-     ◦ 三角形（等待顾客）→ 员工1 → 缓冲区 → 员工2 → 缓冲区 → 员工3。  
-   • **瓶颈影响**：即使员工1和3产能更高，整体流程速率由员工2的46秒/单位决定。  
+### 附录：字幕
 
-5. **批量生产时间计算**  
-   • **公式**：总时间 = 第一个单位完成时间 + (数量-1) × 周期时间。  
-   • **案例**：20个三明治的总时间 = 120秒（第一个） + 19×46秒 = **994秒**（约16.5分钟）。  
-
----
-
-### 关键结论  
-1. **瓶颈决定整体效率**：  
-   • 即使非瓶颈环节效率高，系统产出仍受限于最慢环节（如Subway员工2）。优化瓶颈可显著提升产能（如简化配菜步骤或增加员工）。  
-
-2. **周期时间与流程速率的动态平衡**：  
-   • 周期时间缩短可直接提升流程速率（如从46秒→40秒，产能从78→90单位/小时）。  
-   • 当需求波动时，灵活调整资源配置（如高峰时段增加员工）。  
-
-3. **劳动力利用率的管理意义**：  
-   • 高利用率（如员工2的100%）提示资源满负荷，需警惕超负荷风险（如员工疲劳导致错误）。  
-   • 低利用率（如员工1和3的80%）表明存在闲置产能，可通过任务分配优化（如让员工1协助其他环节）。  
-
-4. **精益生产的核心：消除浪费**：  
-   • **时间浪费**：通过流程流图识别非增值步骤（如等待时间）。  
-   • **劳动力浪费**：标准化操作（如Subway的装配线分工）减少重复动作。  
-
-5. **数据驱动的决策流程**：  
-   • 使用工具（如Excel）量化处理时间、产能、利用率，支持科学管理。  
-   • 实际应用：计算目标人力（Takt Time=可用时间/需求，目标人力=总劳动力内容/Takt Time）。  
-
-**最终目标**：通过微观流程分析，实现**高效率（缩短周期时间）、低成本（优化劳动力）、高响应（灵活应对需求）**的精益运营体系。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第五课 Introduction to Operations Management 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Flow Management and Lean Operations
@@ -97,3 +127,4 @@ All right, here we go. Let's look at this together. Let's start by drawing the p
 That gives me my process capacity and we assume there's plenty of demand. So my flow rate is, as usual, minimum between demand and process capacity. Again, this is going to be driven by the capacity of the bottleneck. Next up, I'm going to look at the utilization. And the utilization is the flow rate, which is going to be one over 46 divided by the capacity levels. And so for the first resource, that's going to be 1/46 divided by 1/37. And that means 37 divided by 46. For the second resource, it is 1/46. Again, fluoride divided by capacity, which is also 1/46. So the utilization there is one. And then for the third employee, it's again 1/46 divided by 1/37. And that gives me again 37 divided by 46, which we said is around 80%.
 
 Next, let's look at the cycle time, which is what we said was 1/flow rate. And here's why I didn't convert it into hours. If you write it this way, it's quite simple. The cycle time is simply 1/flow rate. And the flow rate was 1/46. So all that combined gives us a cycle time of 46 seconds per sandwich. Every 46 seconds, life repeats itself. And then finally to make 20 units, starting with an empty process, we have to first produce the first sandwich. And for the first sandwich, it's going to take us 37 plus 46 plus 37, which together gets us 120 seconds. So after 120 seconds, we have one sandwich. So now we need 19 times an additional sandwich. And guess what? We're making those on a 46 second cycle. So we have 120 plus 19 times 46, which gets us to the 994 seconds. So far with the Subway case, we mainly repeated our capacity calculation. I also introduced the concept of cycle time. Please, be careful with the word cycle time. I've seen it used very differently across industry. Most importantly, I've come across some companies that use the word cycle time for what we call flow time. Now, not surprisingly, I think my definition is the right one. The word cycle time in my view captures the idea of a cycle. Every 46 seconds a process in our Subway case repeats itself. Every 46 seconds a new cycle begins. The cycle time is particularly useful for processes with discrete flow units. I wouldn't use the concept in an oil refinery or a brewery. It just works better when you're dealing with customers or widgets or sandwiches. The cycle time helps us find how long it would take to produce a certain number of units, starting with an empty system. As we will see, the cyclotime also will be at the heart of some further productivity calculations. Speaking of further calculations, in the next video we will talk more about the importance of labor productivity. I will introduce two new measures and then we will link those to financial performance. See you then.
+```
